# TruckingNavigation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Include/: mtest.h
cmake/: mtest.cmake
src/: AStarPathFinding.c  AStarPathFinding.h  AnsiColorCodes.h  CMakeLists.txt  CheckCoordinateSetFunc.c  CheckCoordinateSetFunc.h  ConverterFunc.c  ConverterFunc.h  CreateStaticMapFunc.c  CreateStaticMapFunc.h  DefineConst.h  DefineStruct.h  DijkstraAlgorithm.c  DijkstraAlgorithm.h  DivideRouteFunc.c  DivideRouteFunc.h  GenBlockadeFunc.c  GenBlockadeFunc.h  GenInterstateFunc.c  GenInterstateFunc.h  GenStopsFunc.c  GenStopsFunc.h  GetDestinationFunc.c  GetDestinationFunc.h  HelperFunc.c  HelperFunc.h  InterState.c  MapGenFunc.c  MapGenFunc.h  Navigation.c  Navigation.h  main.c  mapGen.c  mapGen.h  pathFinding.c  pathFinding.h  pathfinding.c  pathfinding.h  programFuntions.c  programFuntions.h  (+4 more)
test/: CMakeLists.txt  testAstarPathFinding.c  testCheckCoordinateSetFunc.c  testConverterFunc.c  testDijkstraAlgorithm.c  testDivideRouteFunc.c  testGenBlockadeFunc.c  testGenInterstateFunc.c  testGenStopsFunc.c  testGetDestinationFunc.c  testHelperFunc.c  testMain.c  testMapGenFunc.c  testNavigation.c  testpathFinding.c
